Add wokring modes in slips.conf

--- a/slips.conf
+++ b/slips.conf
@@ -194,8 +194,14 @@ ti_files = https://mcfp.felk.cvut.cz/publicDatasets/CTU-AIPP-BlackList/Todays-Bl
 # [9] configuration for long connections detection module
 [flowalerts]
 
-# we need a thrshold to determine a long connection. in slips by default is.
+# we need a threshold to determine a long connection. in slips by default is.
 long_connection_threshold = 1500
 
 ssh_succesful_detection_threshold = 4290
 
+####################
+# [11] configuration for long connections detection module
+[anomaly-detection]
+
+# Available options: trained  or test
+mode = trained
