Send conn.log lines to anomaly-detection module

--- a/slips.conf
+++ b/slips.conf
@@ -203,5 +203,5 @@ ssh_succesful_detection_threshold = 4290
 # [11] configuration for long connections detection module
 [anomaly-detection]
 
-# Available options: trained  or test
-mode = trained
+# Available options: training  or test
+mode = training
