Load model in test mode and parse test values

--- a/slips.conf
+++ b/slips.conf
@@ -204,4 +204,4 @@ ssh_succesful_detection_threshold = 4290
 [anomaly-detection]
 
 # Available options: training  or test
-mode = training
+mode = test
