Set default mode to None

--- a/slips.conf
+++ b/slips.conf
@@ -137,7 +137,7 @@ evidence_detection_threshold = 0.1
 # [5] Generic Confs for the modules or to process the modules
 [modules]
 # List of modules to ignore. By default we always ignore the template! do not remove it from the list
-disable = ['TemplateModule','cc-detector-1', 'mldetection-1','ensembling']
+disable = ['TemplateModule','cc-detector-1', 'mldetection-1','ensembling','UpdateManager']
 # Names of other modules that you can disable: 'cc-detector-1','ensembling', 'threatintelligence1', 'GeoIP', 'asn', 'blocking', 'irc-ml-detection', 'portscanDetector-1', 'timeline', 'virustotal', 'lstm-cc-detection-1'
 
 # For each line in timeline file there is a timestamp. By default the timestamp is seconds in unix time. However
@@ -203,5 +203,5 @@ ssh_succesful_detection_threshold = 4290
 # [11] configuration for long connections detection module
 [anomaly-detection]
 
-# Available options: training  or test
-mode = test
+# Available options: training - test - None
+mode = None
