Move anomaly_detection_mode to [parameters] and update the docs

--- a/slips.conf
+++ b/slips.conf
@@ -111,11 +111,9 @@ deletePrevdb = True
 label = unknown
 
 
-
-
-
-
-
+# Configuration for the anomaly detection module
+# Available options: training - testing
+anomaly_detection_mode = testing
 
 #####################
 # [4] Configuration for the detections
@@ -200,8 +198,4 @@ long_connection_threshold = 1500
 ssh_succesful_detection_threshold = 4290
 
 ####################
-# [11] configuration for long connections detection module
-[anomaly-detection]
 
-# Available options: training - test - None
-mode = None
