fix all hardcoded paths

--- a/slips.conf
+++ b/slips.conf
@@ -137,8 +137,9 @@ evidence_detection_threshold = 0.1
 # [5] Generic Confs for the modules or to process the modules
 [modules]
 # List of modules to ignore. By default we always ignore the template! do not remove it from the list
-disable = [TemplateModule, mldetection-1, ensembling]
-# Names of other modules that you can disable: ensembling, threatintelligence1, GeoIP, asn, blocking, irc-ml-detection, portscanDetector-1, timeline, virustotal, lstm-cc-detection-1
+disable = [template, ML_detection1, ensembling]
+# Names of other modules that you can disable: ensembling, threatint_elligence1, geoip, asn,
+# blocking, ML_detection1, portscan_detector1, timeline, virustotal, lstm_cc_detection1
 
 # For each line in timeline file there is a timestamp. By default the timestamp is seconds in unix time. However
 # by setting this variable to "True" value the time will be human readable.
@@ -177,8 +178,8 @@ virustotal_update_period = 259200
 # All the files in this folder are read and the IPs are considered malicious
 # The format of the files must be, per line: "Number","IP address","Rating", "Description"
 # For example:  "1","191.101.31.25","100","NSO IP by Amnesty"
-download_path_for_local_threat_intelligence = modules/ThreatIntelligence1/local_data_files/
-download_path_for_remote_threat_intelligence = modules/ThreatIntelligence1/remote_data_files/
+download_path_for_local_threat_intelligence = modules/threat_intelligence1/local_data_files/
+download_path_for_remote_threat_intelligence = modules/threat_intelligence1/remote_data_files/
 
 # Update period of malicious IPs in Threat Intelligence module. How often should we update the malicious IPs?
 # The expected value in seconds.
