--- a/slips.conf
+++ b/slips.conf
@@ -139,7 +139,7 @@ evidence_detection_threshold = 0.1
 # List of modules to ignore. By default we always ignore the template! do not remove it from the list
 disable = [template, ML_detection1, ensembling]
 # Names of other modules that you can disable: ensembling, threatint_elligence1, geoip, asn,
-# blocking, ML_detection1, portscan_detector1, timeline, virustotal, lstm_cc_detection1
+# blocking, ML_detection1, portscan_detector1, timeline, virustotal, lstm_cc_detection1, update_manager
 
 # For each line in timeline file there is a timestamp. By default the timestamp is seconds in unix time. However
 # by setting this variable to "True" value the time will be human readable.
