Update branch with develop

--- a/slips.conf
+++ b/slips.conf
@@ -221,8 +221,8 @@ data_exfiltration_threshold = 700
 # [10] configuration for ExportingAlerts module
 [ExportingAlerts]
 
-# available options [slack,stix] without quotes
-#export_to = [stix, slack]
+# available options [slack,stix,json] without quotes
+#export_to = [stix, json]
 #export_to = [slack]
 export_to = []
 
